--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.86"
+bytes = "1.6.0"
+futures = "0.3.30"
+regex = "1.10.4"
+reqwest = "0.12.4"
+serde_json = "1.0.117"
+tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
+url = "2.5.0"
