--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ reqwest = "0.12.4"
 serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
 url = "2.5.0"
+
+[profile.release]
+strip = true
