--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 anyhow = "1.0.86"
 bytes = "1.6.0"
 futures = "0.3.30"
-image = { version = "0.25.1", features = ["rayon", "jpeg"] }
-regex = "1.10.4"
-reqwest = "0.12.4"
+image = { version = "0.25.1", default-features = false, features = ["rayon", "jpeg"] }
+regex = { version = "1.10.4", default-features = false, features = ["std", "perf"] }
+reqwest = { version = "0.12.4", default-features = false, features = ["default-tls", "macos-system-configuration"] }
 serde_json = "1.0.117"
-tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
+tokio = { version = "1.38.0", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
 url = "2.5.0"
 
 [profile.release]
